--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,11 @@ $main-color: teal;
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'gold';
+    src: url('./Assets/GoldleafBold.ttf');
+}
+
 body {
     font-size: 22px;
     font-family: 'Inter', sans-serif;
@@ -18,23 +23,31 @@ body {
 .btn {
     border: none;
     border-radius: 50vw;
-    padding: 7px 12px;
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+    cursor: pointer;
+    background: none;
+    outline: none;
+    color: #fff;
+    font-weight: 500;
+}
+
+.white {
+    color: #fff;
 }
 
 .flex {
     display: flex;
 }
-img {
-    width: 100%;
-}
+
 .between {
     justify-content: space-between;
 }
+
 .around {
     justify-content: space-around;
 }
 
-@font-face {
-    font-family: 'gold';
-    src: url('./Assets/GoldleafBold.ttf');
+.disable {
+    opacity: 0.4;
 }
