--- a/src/Pages/Home/SignUp/SignUp.module.scss
+++ b/src/Pages/Home/SignUp/SignUp.module.scss
@@ -10,7 +10,7 @@
         color: #fff;
         position: absolute;
         top: 0;
-        right: 5px;
+        right: 5%;
         background-color: teal;
         padding: 0.3rem 0.5rem;
         border-radius: 50vw;
@@ -18,6 +18,7 @@
     }
     form {
         display: flex;
+        justify-content: center;
     }
 
     input {
@@ -29,7 +30,7 @@
         background-color: #333;
         color: #f4f4f4;
         font-weight: 600;
-        width: 400px;
+        width: 95%;
     }
 
     .bottom_btns {
@@ -49,7 +50,12 @@
         }
     }
 }
-
+.back_btn {
+    margin-left: 5%;
+}
+.next_btn {
+    margin-right: 5%;
+}
 .single_form {
     margin-top: 1rem;
     display: flex;
@@ -61,7 +67,7 @@
 
 .small_msg {
     margin: 0;
-    margin-left: 0.5rem;
+    margin-left: 7%;
     margin-top: 0.3rem;
     height: 14px;
     p {
@@ -73,6 +79,25 @@
         width: 14px;
     }
 }
+.profile_wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+.profile_preview {
+    position: absolute;
+    right: 0;
+    width: 25%;
+    border-radius: 50vw;
+}
+
+// .profile_preview::after {
+//     content: 'Preview';
+//     color: #fff;
+//     position: absolute;
+//     bottom: 0;
+// }
 
 .file {
     display: none;
@@ -88,11 +113,12 @@
     border-radius: 30vw;
     cursor: pointer;
     font-weight: 600;
+    margin-left: 5%;
 }
 
 .show_btn {
     position: absolute;
-    right: 0px;
+    right: 5%;
     top: 0px;
     padding: 1rem 0.8rem;
     font-size: 1.2rem;
@@ -103,11 +129,22 @@
     font-weight: 600;
     cursor: pointer;
 }
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     .signup_main {
-        width: 90%;
+        width: 95%;
+        .progress {
+            font-size: 1.2rem;
+        }
+        form {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         input {
-            width: 100%;
+            display: block;
+            margin-inline: auto;
+            width: 90%;
         }
     }
     .small_msg {
