--- a/src/global.scss
+++ b/src/global.scss
@@ -18,6 +18,8 @@ $main-color: teal;
 body {
     font-size: 22px;
     font-family: 'Inter', sans-serif;
+    background-color: #111;
+    color: #fff;
 }
 
 .btn {
