--- a/src/Components/Toast/Toast.module.scss
+++ b/src/Components/Toast/Toast.module.scss
@@ -3,26 +3,30 @@
     position: absolute;
     top: 5px;
     left: 50%;
-    background-color: teal;
+    background-color: #f4f4f4;
     transform: translateX(-50%);
     padding: 0.4rem 2.1rem;
     border-radius: 50vw;
-    box-shadow: 0px 0px 15px 20px rgba(0, 0, 0, 0.9);
+    // box-shadow: 0px 0px 15px 20px rgba(0, 0, 0, 0.9);
     color: #111;
     font-weight: 600;
 }
 
 .success {
-    background-color: green;
+    color: green;
+    border: 1px solid green;
 }
 .error {
-    background-color: red;
+    color: red;
+    border: 1px solid red;
 }
 .warning {
-    background-color: yellow;
+    color: yellow;
+    border: 1px solid yellow;
 }
 .info {
-    background-color: teal;
+    color: teal;
+    border: 1px solid teal;
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
