--- a/src/Pages/Chat/ChatList/ChatList.module.scss
+++ b/src/Pages/Chat/ChatList/ChatList.module.scss
@@ -1,12 +1,13 @@
 .chatlist_main {
     z-index: 100;
     width: 35%;
-    border-right: 1px solid #999;
+    border-right: 1px solid #333;
     .list {
+        height: 90vh;
         position: relative;
-        height: 80vh;
+        height: 82vh;
         overflow-y: scroll;
-        padding-inline: 1rem;
+        // padding-inline: 1rem;
     }
 }
 
@@ -14,5 +15,8 @@
     .chatlist_main {
         width: 100%;
         border-right: none;
+        .list {
+            height: 90vh;
+        }
     }
 }
