--- a/src/Components/Nav/Nav.module.scss
+++ b/src/Components/Nav/Nav.module.scss
@@ -37,6 +37,9 @@
         width: 60px;
         height: 60px;
     }
+    .group_icon {
+        cursor: pointer;
+    }
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
