--- a/src/Components/Profile/Profile.module.scss
+++ b/src/Components/Profile/Profile.module.scss
@@ -2,7 +2,8 @@
     background-color: #000;
     padding: 2rem;
     border-radius: 1rem;
-    width: 50%;
+    min-width: 350px;
+    max-width: 550px;
     .head_wrapper {
         display: flex;
         justify-content: space-between;
