--- a/src/Components/CreateGroup/CreateGroup.module.scss
+++ b/src/Components/CreateGroup/CreateGroup.module.scss
@@ -60,7 +60,7 @@
     }
     .create_btn {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         align-items: center;
         padding: 0.5rem;
         button {
