--- a/src/Pages/Chat/ChatBox/ChatBox.module.scss
+++ b/src/Pages/Chat/ChatBox/ChatBox.module.scss
@@ -2,11 +2,10 @@
     z-index: 120;
     width: 65%;
     height: 100%;
-    // border: 1px solid yellow;
     background-color: rgba(0, 0, 0);
     transition: all 100ms ease-out;
+    position: relative;
     .svg {
-        // border: 1px solid yellow;
         height: 100%;
         display: flex;
         justify-content: center;
@@ -25,14 +24,12 @@
         }
     }
     .main_chat {
-        // border: 1px solid yellow;
         height: 99%;
         .chat_head {
             height: 10%;
             background-color: #111;
             position: relative;
             display: flex;
-            // justify-content: space-between;
             align-items: center;
             .icon_pic_wrapper {
                 display: flex;
@@ -43,23 +40,28 @@
                     margin-left: 1rem;
                     cursor: pointer;
                 }
-                .chat_pic {
-                    width: 3.3rem;
-                    border-radius: 50vw;
-                }
-                .chat_name {
-                    color: #fff;
+                .name_wrapper {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    gap: 1rem;
+                    cursor: pointer;
+                    .chat_pic {
+                        width: 3rem;
+                        border-radius: 50vw;
+                    }
+                    .chat_name {
+                        color: #fff;
+                    }
                 }
             }
         }
         .chat_content {
             height: 83%;
-            // border: 1px solid red;
         }
         .type_field {
             height: 8%;
             padding: 5px;
-            // background-color: #555;
             input {
                 width: 100%;
                 height: 3rem;
@@ -74,6 +76,7 @@
         }
     }
 }
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     .chatbox_main {
         position: absolute;
@@ -82,6 +85,13 @@
         .main_chat {
             height: 92%;
             .chat_head {
+                .icon_pic_wrapper {
+                    .name_wrapper {
+                        .chat_pic {
+                            width: 2.5rem;
+                        }
+                    }
+                }
                 height: 8%;
             }
             .chat_content {
