Auto scoll to bottom for messages Fixed!

--- a/src/Pages/Chat/ChatBox/SingleChat/ScollableChat/ScollableChat.module.scss
+++ b/src/Pages/Chat/ChatBox/SingleChat/ScollableChat/ScollableChat.module.scss
@@ -1,5 +1,6 @@
 .scollable_main {
     padding: 0.4rem;
+    height: 100%;
     .content_wrapper {
         display: flex;
         justify-content: flex-start;
