--- a/src/Pages/ForgetPassword/ForgetPassword.module.scss
+++ b/src/Pages/ForgetPassword/ForgetPassword.module.scss
@@ -1,5 +1,72 @@
 .main {
     background-color: #000;
     .main_title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        user-select: none;
+        img {
+            height: 80px;
+            width: 80px;
+            margin-top: 10px;
+        }
+        h1 {
+            color: #fff;
+            text-align: center;
+            font-family: 'gold';
+            font-size: 3.8rem;
+            margin: 0;
+        }
     }
+    .form_container {
+        width: 30%;
+        margin-inline: auto;
+        margin-top: 2.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        // border: 1px solid red;
+        .instruct {
+            margin-top: 1.5rem;
+            font-size: 1rem;
+            margin-left: 0.5rem;
+            margin-bottom: 0.25rem;
+        }
+        .input_wrapper {
+            position: relative;
+            width: 100%;
+            .icon {
+                position: absolute;
+                right: 8px;
+                top: 50%;
+                transform: translateY(-50%);
+                cursor: pointer;
+            }
+        }
+        .input {
+            font-size: 1.35rem;
+            padding: 0.75rem 1.25rem;
+            outline: none;
+            border: none;
+            border-radius: 1rem;
+            background-color: #333;
+            color: #fff;
+            width: 100%;
+            font-weight: 600;
+        }
+
+        .verify_btn {
+            align-self: flex-end;
+            background-color: teal;
+            margin-top: 1.25rem;
+        }
+    }
+}
+
+.msg {
+    margin-top: 4px;
+    height: 16px;
+    font-size: 14px;
+    margin-left: 10px;
 }
