--- a/src/Pages/Chat/ChatBox/SingleChat/SingleChat.module.scss
+++ b/src/Pages/Chat/ChatBox/SingleChat/SingleChat.module.scss
@@ -51,16 +51,27 @@
     .type_field {
         height: 8%;
         padding: 5px;
-        input {
-            width: 100%;
-            height: 3rem;
-            outline: none;
-            border: none;
-            background-color: #333;
-            border-radius: 50vw;
-            font-size: 1.15rem;
-            padding-inline: 1.3rem;
-            color: #fff;
+        .msg_input_wrapper {
+            position: relative;
+            input {
+                width: 100%;
+                height: 3rem;
+                outline: none;
+                border: none;
+                background-color: #333;
+                border-radius: 50vw;
+                font-size: 1.15rem;
+                padding-inline: 1.3rem;
+                color: #fff;
+                padding-right: 6rem;
+            }
+            .send_btn {
+                position: absolute;
+                z-index: 10;
+                right: 0px;
+                top: 50%;
+                transform: translateY(-50%);
+            }
         }
     }
 }
