--- a/src/Pages/ForgetPassword/ForgetPassword.module.scss
+++ b/src/Pages/ForgetPassword/ForgetPassword.module.scss
@@ -70,3 +70,21 @@
     font-size: 14px;
     margin-left: 10px;
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    .main {
+        .main_title {
+            img {
+                height: 60px;
+                width: 60px;
+                margin-top: 11px;
+            }
+            h1 {
+                font-size: 3rem;
+            }
+        }
+        .form_container {
+            width: 85%;
+        }
+    }
+}
