--- a/src/Pages/Chat/ChatBox/SingleChat/SingleChat.module.scss
+++ b/src/Pages/Chat/ChatBox/SingleChat/SingleChat.module.scss
@@ -1,111 +1,111 @@
 .main_chat {
-    height: 99%;
-    .chat_head {
-        height: 10%;
-        background-color: #111;
-        position: relative;
+  height: 99%;
+  .chat_head {
+    height: 10%;
+    background-color: #111;
+    position: relative;
+    display: flex;
+    align-items: center;
+    .icon_pic_wrapper {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 1rem;
+      .back_icon {
+        margin-left: 1rem;
+        cursor: pointer;
+      }
+      .name_wrapper {
         display: flex;
+        justify-content: flex-start;
         align-items: center;
-        .icon_pic_wrapper {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            gap: 1rem;
-            .back_icon {
-                margin-left: 1rem;
-                cursor: pointer;
-            }
-            .name_wrapper {
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-                gap: 1rem;
-                cursor: pointer;
-                .chat_pic {
-                    width: 3rem;
-                    border-radius: 50vw;
-                }
-                .chat_name {
-                    color: #fff;
-                }
-            }
+        gap: 1rem;
+        cursor: pointer;
+        .chat_pic {
+          width: 3rem;
+          border-radius: 50vw;
         }
+        .chat_name {
+          color: #fff;
+        }
+      }
     }
-    .chat_content {
-        height: 83%;
-        overflow: hidden;
-        .message_loading {
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            .loading_img {
-                width: 8%;
-            }
-        }
-        .chat_overflow_wrapper {
-            height: 100%;
-            overflow-y: scroll;
-        }
+  }
+  .chat_content {
+    height: 83%;
+    overflow: hidden;
+    .message_loading {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .loading_img {
+        width: 8%;
+      }
     }
-    .type_field {
-        height: 8%;
-        padding: 5px;
-        .msg_input_wrapper {
-            position: relative;
-            input {
-                width: 100%;
-                height: 3rem;
-                outline: none;
-                border: none;
-                background-color: #333;
-                border-radius: 50vw;
-                font-size: 1.15rem;
-                padding-inline: 1.3rem;
-                color: #fff;
-                padding-right: 6rem;
-            }
-            .send_btn {
-                position: absolute;
-                z-index: 10;
-                right: 0px;
-                top: 50%;
-                transform: translateY(-50%);
-            }
-        }
+    .chat_overflow_wrapper {
+      height: 100%;
+      overflow-y: scroll;
     }
+  }
+  .type_field {
+    height: 8%;
+    padding: 5px;
+    .msg_input_wrapper {
+      position: relative;
+      input {
+        width: 100%;
+        height: 3rem;
+        outline: none;
+        border: none;
+        background-color: #333;
+        border-radius: 50vw;
+        font-size: 1.15rem;
+        padding-inline: 1.3rem;
+        color: #fff;
+        padding-right: 6rem;
+      }
+      .send_btn {
+        position: absolute;
+        z-index: 10;
+        right: 0px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+  }
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    .main_chat {
-        height: 92%;
-        .chat_head {
-            .icon_pic_wrapper {
-                .name_wrapper {
-                    .chat_pic {
-                        width: 2.5rem;
-                    }
-                }
-            }
-            height: 8%;
+  .main_chat {
+    height: 92%;
+    .chat_head {
+      .icon_pic_wrapper {
+        .name_wrapper {
+          .chat_pic {
+            width: 2.5rem;
+          }
         }
-        .chat_content {
-            height: 84%;
-            .message_loading {
-                .loading_img {
-                    width: 17%;
-                }
-            }
-        }
-        .type_field {
-            height: 8%;
-            &::after {
-                content: 'Swipe Down from here to see chat head';
-                text-align: center;
-                font-size: 1rem;
-                margin-top: 2rem;
-                display: block;
-            }
-        }
+      }
+      height: 8%;
     }
+    .chat_content {
+      height: 84%;
+      .message_loading {
+        .loading_img {
+          width: 17%;
+        }
+      }
+    }
+    .type_field {
+      height: 8%;
+      &::after {
+        content: "Swipe Down from here to see chat head";
+        text-align: center;
+        font-size: 1rem;
+        margin-top: 2rem;
+        display: block;
+      }
+    }
+  }
 }
