--- a/src/Pages/Home/SignUp/SignUp.module.scss
+++ b/src/Pages/Home/SignUp/SignUp.module.scss
@@ -1,20 +1,45 @@
 .signup_main {
   width: 400px;
   margin-inline: auto;
-  margin-top: 10%;
+  margin-top: 6rem;
   position: relative;
-  padding-top: 2rem;
   overflow: hidden;
-  .progress {
-    color: #fff;
-    position: absolute;
-    top: 0;
-    right: 10%;
-    background-color: teal;
-    padding: 0.3rem 0.5rem;
-    border-radius: 50vw;
-    font-weight: 600;
+
+  .main_title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      height: 80px;
+      width: 80px;
+      margin-top: 10px;
+    }
+
+    h1 {
+      color: #fff;
+      text-align: center;
+      font-family: "gold";
+      font-size: 3.8rem;
+      margin: 0;
+    }
   }
+
+  .progress_wrapper {
+    display: flex;
+    justify-content: end;
+    margin-right: 4rem;
+
+    .progress {
+      color: #fff;
+      width: min-content;
+      background-color: teal;
+      padding: 0.3rem 0.5rem;
+      border-radius: 50vw;
+      font-weight: 600;
+    }
+  }
+
   form {
     display: flex;
     justify-content: center;
@@ -34,6 +59,7 @@
 
   .bottom_btns {
     margin-top: 2rem;
+
     button {
       font-size: 1.25rem;
       background: none;
@@ -47,13 +73,31 @@
       cursor: pointer;
     }
   }
+
+  .link {
+    color: teal;
+    user-select: none;
+    outline: none;
+    display: block;
+    border: none;
+    width: max-content;
+    text-decoration: none;
+    margin: auto;
+    margin-top: 2rem;
+    background: none;
+    font-size: 1.1rem;
+    cursor: pointer;
+  }
 }
+
 .back_btn {
   margin-left: 5%;
 }
+
 .next_btn {
   margin-right: 10%;
 }
+
 .single_form {
   margin-top: 1rem;
   display: flex;
@@ -66,21 +110,25 @@
   margin-left: 2%;
   margin-top: 0.3rem;
   height: 14px;
+
   p {
     font-size: 1rem;
     color: #fff;
   }
+
   .small_spinner {
     height: 14px;
     width: 14px;
   }
 }
+
 .profile_wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: relative;
 }
+
 .profile_preview {
   position: absolute;
   right: 0;
@@ -91,10 +139,12 @@
 .file {
   display: none;
 }
+
 .pass_wrapper {
   width: fit-content;
   position: relative;
 }
+
 .upload_btn {
   font-size: 1.2rem;
   padding: 1rem;
@@ -121,33 +171,40 @@
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .signup_main {
     width: 95%;
+
     .progress {
       font-size: 1.2rem;
       right: 5%;
     }
+
     form {
       display: flex;
       justify-content: center;
       align-items: center;
     }
+
     input {
       display: block;
       margin-inline: auto;
       width: 90%;
     }
   }
+
   .upload_btn {
     margin-left: 8%;
     font-size: 1rem;
     padding: 0.75rem;
   }
+
   .small_msg {
     height: 14px;
     margin-left: 7%;
   }
+
   .next_btn {
     margin-right: 7%;
   }
+
   .profile_preview {
     margin-right: 5%;
   }
