--- a/src/Pages/Home/SignUp/SignUp.module.scss
+++ b/src/Pages/Home/SignUp/SignUp.module.scss
@@ -3,7 +3,6 @@
   margin-inline: auto;
   margin-top: 6rem;
   position: relative;
-  overflow: hidden;
 
   .main_title {
     display: flex;
@@ -25,52 +24,49 @@
     }
   }
 
-  .progress_wrapper {
-    display: flex;
-    justify-content: end;
-    margin-right: 4rem;
-
-    .progress {
-      color: #fff;
-      width: min-content;
-      background-color: teal;
-      padding: 0.3rem 0.5rem;
-      border-radius: 50vw;
-      font-weight: 600;
-    }
-  }
-
   form {
-    display: flex;
-    justify-content: center;
-  }
+    .progress_wrapper {
+      display: flex;
+      justify-content: end;
 
-  input {
-    font-size: 1.4rem;
-    outline: none;
-    border-radius: 15px;
-    border: none;
-    padding: 1rem 1.6rem;
-    background-color: #333;
-    color: #f4f4f4;
-    font-weight: 600;
-    width: 95%;
-  }
+      .progress {
+        color: #fff;
+        width: min-content;
+        background-color: teal;
+        padding: 0.3rem 0.5rem;
+        border-radius: 50vw;
+        font-weight: 600;
+      }
+    }
 
-  .bottom_btns {
-    margin-top: 2rem;
-
-    button {
-      font-size: 1.25rem;
-      background: none;
-      border: none;
+    input {
+      font-size: 1.4rem;
       outline: none;
-      background-color: teal;
-      padding: 0.5rem 1.2rem;
-      color: #fff;
-      border-radius: 50vw;
+      border-radius: 15px;
+      border: none;
+      padding: 1rem 1.6rem;
+      background-color: #333;
+      color: #f4f4f4;
       font-weight: 600;
-      cursor: pointer;
+      width: 100%;
+      margin-inline: auto;
+    }
+
+    .bottom_btns {
+      margin-top: 2rem;
+
+      button {
+        font-size: 1.25rem;
+        background: none;
+        border: none;
+        outline: none;
+        background-color: teal;
+        padding: 0.5rem 1.2rem;
+        color: #fff;
+        border-radius: 50vw;
+        font-weight: 600;
+        cursor: pointer;
+      }
     }
   }
 
@@ -88,14 +84,6 @@
     font-size: 1.1rem;
     cursor: pointer;
   }
-}
-
-.back_btn {
-  margin-left: 5%;
-}
-
-.next_btn {
-  margin-right: 10%;
 }
 
 .single_form {
@@ -141,7 +129,7 @@
 }
 
 .pass_wrapper {
-  width: fit-content;
+  width: 100%;
   position: relative;
 }
 
@@ -156,7 +144,7 @@
 
 .show_btn {
   position: absolute;
-  right: 5%;
+  right: 0.5rem;
   top: 0px;
   padding: 1rem 0.8rem;
   font-size: 1.2rem;
