--- a/src/Pages/Chat/ChatList/ChatList.module.scss
+++ b/src/Pages/Chat/ChatList/ChatList.module.scss
@@ -1,20 +1,23 @@
-.chatlist_main {
+.main_chat_list {
   z-index: 100;
-  width: 35%;
+  width: 30rem;
   border-right: 1px solid #333;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
   .list {
-    height: 90vh;
+    flex: 1;
     position: relative;
-    height: 82vh;
-    overflow-y: scroll;
-    // padding-inline: 1rem;
+    overflow: auto;
   }
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  .chatlist_main {
+  .main_chat_list {
     width: 100%;
     border-right: none;
+
     .list {
       height: 90vh;
     }
