--- a/src/Pages/Chat/ChatPage.module.scss
+++ b/src/Pages/Chat/ChatPage.module.scss
@@ -1,6 +1,6 @@
 .chatpage_main {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   overflow: hidden;
   background-color: #000;
