REFACT: single chat & group view components

--- a/src/Pages/Chat/ChatBox/SingleChat/ScrollableChat/ScrollableChat.module.scss
+++ b/src/Pages/Chat/ChatBox/SingleChat/ScrollableChat/ScrollableChat.module.scss
@@ -1,16 +1,19 @@
-.scollable_main {
+.scrollable_main {
   padding: 0.4rem;
   height: 100%;
+
   .content_wrapper {
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
     gap: 0.35rem;
+
     .sender_pic {
       width: 1.75rem;
       height: 1.75rem;
       border-radius: 50vw;
     }
+
     .content {
       background-color: teal;
       padding: 0;
@@ -22,6 +25,7 @@
       max-width: 70%;
     }
   }
+
   .typing_wrapper {
     margin-top: 0.75rem;
     margin-bottom: 0.5rem;
@@ -30,11 +34,13 @@
     justify-content: flex-end;
     align-items: center;
     gap: 0.5rem;
+
     .typers_pic {
       width: 1.75rem;
       height: 1.75rem;
       border-radius: 50vw;
     }
+
     .typing_dots {
       border-radius: 50vw;
       width: 3rem;
