--- a/src/Components/GroupInfo/GroupInfo.module.scss
+++ b/src/Components/GroupInfo/GroupInfo.module.scss
@@ -1,18 +1,26 @@
-.groupinfo_main {
+.group_info_main {
   width: 100%;
-  height: 100%;
-  overflow: scroll;
-  padding: 1rem;
+  height: 100dvh;
+  overflow: auto;
+  padding-bottom: 3rem;
+
   .head_wrapper {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
+    padding-block: 1rem;
+    position: sticky;
+    background: #000;
+    top: 0;
+    z-index: 1;
   }
+
   .img_container {
     margin-inline: auto;
-    width: 35%;
+    width: 25%;
     aspect-ratio: 1/1;
+
     .img {
       width: 100%;
       display: block;
@@ -21,6 +29,7 @@
       margin-top: 1rem;
     }
   }
+
   .group_name {
     display: flex;
     justify-content: center;
@@ -29,6 +38,7 @@
     text-align: center;
     margin-top: 1rem;
     font-size: 2.5rem;
+
     .name_input {
       font-size: 1.5rem;
       padding: 0.75rem;
@@ -40,12 +50,15 @@
       border-radius: 1rem;
     }
   }
+
   .members {
     margin-top: 1rem;
     font-size: 1.75rem;
     user-select: none;
+
     ul {
       color: #fff;
+
       .you {
         margin-top: 1rem;
         font-size: 1.1rem;
@@ -54,21 +67,25 @@
       }
     }
   }
+
   .search_wrapper {
     margin-top: 1.5rem;
-    border: 1px solid #111;
+    border: 1px solid #333;
     border-radius: 10px;
     overflow: hidden;
+
     .list {
-      max-height: 40vh;
+      height: 40vh;
       width: 100%;
       overflow-y: scroll;
     }
   }
+
   .leave_group {
     margin-top: 1.5rem;
     display: flex;
     justify-content: flex-end;
+
     .btn {
       background-color: red;
     }
@@ -76,30 +93,36 @@
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  .groupinfo_main {
+  .group_info_main {
     .head_wrapper {
       h2 {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
       }
     }
+
     .img_container {
-      width: 60%; //
-      margin-top: 2rem; //
+      width: 60%;
+      margin-top: 2rem;
     }
+
     .group_name {
-      font-size: 1.85rem; //
+      font-size: 1.85rem;
+
       .name_input {
         width: 80%;
         font-size: 1.25rem;
         padding: 0.75rem;
       }
     }
+
     .members {
-      font-size: 1.5rem; //
+      font-size: 1.5rem;
+
       ul {
-        margin-top: 1.25rem; //
+        margin-top: 1.25rem;
+
         .you {
-          font-size: 0.9rem; //
+          font-size: 0.9rem;
         }
       }
     }
