--- a/src/Components/SearchBox/SearchBox.module.scss
+++ b/src/Components/SearchBox/SearchBox.module.scss
@@ -13,7 +13,7 @@
 
   .close_icons {
     position: absolute;
-    left: 3%;
+    left: 1rem;
     top: 50%;
     transform: translateY(-50%);
     font-size: 1.2rem;
