--- a/src/Pages/Chat/ChatPage.module.scss
+++ b/src/Pages/Chat/ChatPage.module.scss
@@ -1,4 +1,4 @@
-.chatpage_main {
+.chat_page_main {
   height: 100vh;
   width: 100%;
   display: flex;
@@ -7,7 +7,7 @@
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  .chatpage_main {
+  .chat_page_main {
     display: bock;
     position: relative;
   }
