--- a/src/Pages/Home/Login/Login.module.scss
+++ b/src/Pages/Home/Login/Login.module.scss
@@ -23,66 +23,82 @@
     }
   }
 
-  span {
-    color: #fff;
-    transition: all 300ms ease-out;
-    width: 50%;
-    text-align: center;
-    padding: 8px 15px;
-    border-radius: 50vw;
-    user-select: none;
-  }
-
-  .form {
+  form {
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
 
-    input {
-      font-size: 1.4rem;
-      outline: none;
-      border-radius: 15px;
-      border: none;
-      padding: 1rem 1.6rem;
-      background-color: #333;
-      color: #f4f4f4;
-      font-weight: 600;
-    }
+    .tabs {
+      display: flex;
+      align-items: center;
+      width: 100%;
 
-    .login_btn {
-      width: fit-content;
-      margin: auto;
-      font-size: 1.5rem;
-      background-color: teal;
-      color: #fff;
-      font-weight: 600;
-      padding: 0.7rem 1.9rem;
-      outline: none;
+      .tab_item {
+        color: #fff;
+        transition: all 300ms ease-out;
+        flex: 1;
+        text-align: center;
+        padding: 8px 15px;
+        border-radius: 50vw;
+        user-select: none;
+      }
     }
   }
 
-  .link {
-    color: teal;
-    user-select: none;
+  input {
+    font-size: 1.4rem;
     outline: none;
-    display: block;
+    border-radius: 15px;
     border: none;
-    width: max-content;
-    text-decoration: none;
-    margin: auto;
-    margin-top: 2rem;
-    background: none;
-    font-size: 1.1rem;
-    cursor: pointer;
+    padding: 1rem 1.6rem;
+    background-color: #333;
+    color: #f4f4f4;
+    font-weight: 600;
   }
+
+  .login_btn {
+    width: fit-content;
+    margin: auto;
+    font-size: 1.5rem;
+    background-color: teal;
+    color: #fff;
+    font-weight: 600;
+    padding: 0.7rem 1.9rem;
+    outline: none;
+  }
+}
+
+.link {
+  color: teal;
+  user-select: none;
+  outline: none;
+  display: block;
+  border: none;
+  width: max-content;
+  text-decoration: none;
+  margin: auto;
+  margin-top: 2rem;
+  background: none;
+  font-size: 1.1rem;
+  cursor: pointer;
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .login_main {
     width: 100%;
 
-    .form {
+    form {
+      align-items: center;
+
+      .tabs {
+        width: 85%;
+      }
+
+      input {
+        width: 85%;
+      }
+
       .login_btn {
         font-size: 1.4rem;
       }
